<resources>
    <string name="app_name">Lab9</string>
    <string name="titleText">Go to the Mountains!</string>
    <string name="skiing">Skiing</string>
    <string name="snowboarding">Snowboarding</string>
    <string name="rideText">How would you like to ride today?</string>
    <string name="locationText">How far would you like to travel?</string>
    <string name="styleText">What would you like to ride today?</string>
    <string name="groomers">Groomers</string>
    <string name="park">Park</string>
    <string name="trees">Trees</string>
    <string name="powder">Powder</string>
    <string name="findMountain">Find Mountain!</string>
    <string name="title_activity_suggestion">SuggestionActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feedbackHint">Feedback on suggestion:</string>
    <string name="suggestionText" />
    <string name="reviewText" />
    <string-array name="distances">
        <item>20 miles</item>
        <item>50 miles</item>
        <item>100 miles</item>
        <item>200 miles</item>
        <item>300+ miles</item>
    </string-array>
</resources>